# mistral-inference

./: .gitignore  Bienvenue to Mistral AI Documentation _ Mistral AI Large Language Models.html  CONTRIBUTING.md  Embeddings _ Mistral AI Large Language Models.html  Function calling _ Mistral AI Large Language Models.html  Guardrailing _ Mistral AI Large Language Models.html  JSON mode _ Mistral AI Large Language Models.html  La Plateforme _ Mistral AI Large Language Models.html  Makefile  Mistral AI API _ Mistral AI Large Language Models.html  Quickstart _ Mistral AI Large Language Models.html  README.md  Text generation _ Mistral AI Large Language Models.html  Tokenization _ Mistral AI Large Language Models.html  base.js.download  eOo4GfHj3ZE.html  main.0b370f62.js.download  main.py  mainwithcomments.py  moe_one_file_ref.py  one_file_ref.py  plugin-redoc-0.yaml  pyproject.toml  requirements.txt  runtime~main.77a48988.js.download  styles.5760d859.css  test_fix_220.py  test_generate.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: django.yml
deploy/: Dockerfile  entrypoint.sh
examples/: safe_streaming_openrouter.py
mistral/: cache.py  model.py  moe.py  rope.py  tokenizer.py
mistral/config/: model_config.py
mistral/layers/: attention.py  feed_forward.py  rms_norm.py
model-service/: .env.example  .gitignore  Procfile  ecosystem.config.js  package.json  server.js
src/mistinf/: args.py  cache.py  main.py  mamba.py  model.py  moe.py  transformer.py  transformer_layers.py
src/mistral_inference/: args.py  cache.py  generate.py  lora.py  main.py  mamba.py  model.py  moe.py  rope.py  transformer.py  transformer_layers.py  vision_encoder.py
tests/: test_generate.py  test_main_generate_dispatch.py
tutorials/: classifier.ipynb  getting_started.ipynb
