[project]
name = "mistinf"
version = "0.0.1"
description = ""
readme = "README.md"
packages = [{ include = "mistral_inference", from = "src" }]
requires-python = ">=3.12"

[tool.ruff]
lint.select = ["E", "F", "W", "Q", "I"]
lint.ignore = ["E203"]
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 120
exclude = ["docs", "build", "tutorials"]

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "tools", "build"]

[dependencies]
python = "^3.9.10"
xformers = ">=0.0.24"
simple-parsing = ">=0.1.5"
fire = ">=0.6.0"
mistral_common = ">=1.5.4"
safetensors = ">=0.4.0"
pillow = ">=10.3.0"

[dev.dependencies]
types-protobuf = "4.24.0.20240129"
mypy-protobuf = "^3.5.0"
pytest = "7.4.4"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["./tests"]

[scripts]
mistral-chat = "mistral_inference.main:mistral_chat"
mistral-demo = "mistral_inference.main:mistral_demo"
